--- a/register.html
+++ b/register.html
@@ -111,7 +111,7 @@
       </form>
       <div class="cta">
         <p>Already have an account?</p>
-        <a href="login.html">Log In</a>
+        <a href="index.html">Log In</a>
       </div>
     </div>
   </body>
